--- a/static/home.html
+++ b/static/home.html
@@ -1,14 +1,60 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML>
 <html>
   <head>
-    <title>home</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>LxcWeb Home</title>
+    <meta charset="utf-8" />
     <meta name="author" content="shell">
-    <script type="text/javascript" src="/static/jquery-1.7.2.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+  </head>
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="/ps/">PS</a></li>
+              <li><a href="/config/">Config</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <table id="vmlist" class="table table-striped table-condensed">
+        <thead>
+          <tr>
+          <td>status</td><td>name</td><td>processes</td>
+          <td>cache</td><td>rss</td><td>cpu time</td>
+          <td>ipaddr</td><td>actions</td>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+      <form class="form-inline" id="command" method="POST">
+        <input class="inline" type="text" id="container_name" placeholder="Container Name" />
+        <input class="inline" type="text" name="cmd" placeholder="cmd" />
+        <a id="refresh" href=""><img src="/static/view-refresh-4.png"></a>
+      </form>
+      <div id="action_tip"></div>
+      <table id="info" class="table table-striped table-conden">
+        <thead><tr><td>name</td><td>value</td></tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
+    <script type="text/javascript" src="/static/js/jquery-1.10.2.min.js" charset="utf-8"></script>
     <script>
 function readable_size(s){
     if (! s) {
-	return "--"
+  return "--"
     }
     s = s / 1024 / 1024;
     return s.toFixed(0)+" MB"
@@ -17,36 +63,36 @@ function readable_size(s){
 function each_vm(name, item){
     newtr = '<tr name="'+name+'">';
     if (item["state"] == "RUNNING") {
-	newtr += '<td><img class="infotip" src="/static/user-online.png"/></td>';
-	newtr += '<td>'+name+'</td>';
-	newtr += '<td><a href="/ps/'+name+'">'+item["pids"].length+'</a></td>';
-	newtr += '<td>'+readable_size(item['cache'])+'</td>';
-	newtr += '<td>'+readable_size(item['rss'])+'</td>';
-	newtr += '<td>'+item['cpu_usage']+'</td>';
-	newtr += '<td>';
-	$.each(item['ipaddr'], function(i, ipaddr){
-	    newtr += '<a href="http://'+ipaddr[0]+'">'+ipaddr[0]+'</a>/'+ipaddr[1];
-	});
-	newtr += '</td>';
+  newtr += '<td><img class="infotip" src="/static/user-online.png"/></td>';
+  newtr += '<td>'+name+'</td>';
+  newtr += '<td><a href="/ps/'+name+'">'+item["pids"].length+'</a></td>';
+  newtr += '<td>'+readable_size(item['cache'])+'</td>';
+  newtr += '<td>'+readable_size(item['rss'])+'</td>';
+  newtr += '<td>'+item['cpu_usage']+'</td>';
+  newtr += '<td>';
+  $.each(item['ipaddr'], function(i, ipaddr){
+      newtr += '<a href="http://'+ipaddr[0]+'">'+ipaddr[0]+'</a>/'+ipaddr[1];
+  });
+  newtr += '</td>';
     } else {
-	newtr += '<td><img class="infotip" src="/static/user-offline.png"/></td>';
-	newtr += '<td>'+name+'</td>';
-	newtr += '<td>--</td>';
-	newtr += '<td>--</td>';
-	newtr += '<td>--</td>';
-	newtr += '<td>--</td>';
-	newtr += '<td>--</td>';
+  newtr += '<td><img class="infotip" src="/static/user-offline.png"/></td>';
+  newtr += '<td>'+name+'</td>';
+  newtr += '<td>--</td>';
+  newtr += '<td>--</td>';
+  newtr += '<td>--</td>';
+  newtr += '<td>--</td>';
+  newtr += '<td>--</td>';
     }
 
     newtr += '<td><a href="/config/'+name+'"><img class="tip" src="/static/configure-3.png" alt="config"/></a>';
     if (item['state'] == 'RUNNING') {
-	newtr += '<a href="/shutdown/'+name+'"><img class="tip" src="/static/media-playback-stop-3.png" alt="shutdown"/></a>';
-	newtr += '<a href="/stop/'+name+'"><img class="tip" src="/static/application-exit-5.png" alt="stop"/></a>';
-	newtr += '<a href="/reboot/'+name+'"><img class="tip" src="/static/system-reboot-2.png" alt="reboot"/></a>';
+  newtr += '<a href="/shutdown/'+name+'"><img class="tip" src="/static/media-playback-stop-3.png" alt="shutdown"/></a>';
+  newtr += '<a href="/stop/'+name+'"><img class="tip" src="/static/application-exit-5.png" alt="stop"/></a>';
+  newtr += '<a href="/reboot/'+name+'"><img class="tip" src="/static/system-reboot-2.png" alt="reboot"/></a>';
     } else if (item['state'] == "STOPPED") {
-	newtr += '<a href="/start/'+name+'"><img class="tip" src="/static/media-playback-start-3.png" alt="start"/></a>';
-	newtr += '<a class="clone" href=""><img class="tip" src="/static/db_add-2.png" alt="clone"/></a>';
-	newtr += '<a href="/merge/'+name+'"><img class="tip" src="/static/db_comit.png" alt="merge"/></a>';
+  newtr += '<a href="/start/'+name+'"><img class="tip" src="/static/media-playback-start-3.png" alt="start"/></a>';
+  newtr += '<a class="clone" href=""><img class="tip" src="/static/db_add-2.png" alt="clone"/></a>';
+  newtr += '<a href="/merge/'+name+'"><img class="tip" src="/static/db_comit.png" alt="merge"/></a>';
     }
     newtr += '<a class="clone" mode="fast" href=""><img class="tip" src="/static/db_add.png" alt="fast clone"/></a>';
     newtr += '<a href="/destroy/'+name+'"><img class="tip" src="/static/edit-delete-9.png" alt="destroy"/></a>';
@@ -57,110 +103,87 @@ function each_vm(name, item){
 
 function refresh_info(name){
     $.ajax({
-	url: '/info/'+name+'.json',
-	cache: false,
-	dataType: "json",
-	success: function(data){
-	    newtr = '<tr><td>status</td><td>'+data['state']+'</td></tr>';
-	    newtr += '<tr><td>pid</td><td>'+data['pid']+'</td></tr>';
-	    newtr += '<tr><td>disk usage</td><td>'+data['diskusage']+' MB</td></tr>';
-	    if (data['state'] == 'RUNNING') {
-		newtr += '<tr><td>cpu</td><td>'+data['cpu_usage']+'</td></tr>';
-		newtr += '<tr><td>user</td><td>'+data['user']+'</td></tr>';
-		newtr += '<tr><td>system</td><td>'+data['system']+'</td></tr>';
-		newtr += '<tr><td>memory</td><td>'+readable_size(data['memory'])+'</td></tr>';
-		newtr += '<tr><td>cache</td><td>'+readable_size(data['cache'])+'</td></tr>';
-		newtr += '<tr><td>rss</td><td>'+readable_size(data['rss'])+'</td></tr>';
-	    }
-	    $('#info tbody').append(newtr);
-	},
-    });    
+  url: '/info/'+name+'.json',
+  cache: false,
+  dataType: "json",
+  success: function(data){
+      newtr = '<tr><td>status</td><td>'+data['state']+'</td></tr>';
+      newtr += '<tr><td>pid</td><td>'+data['pid']+'</td></tr>';
+      newtr += '<tr><td>disk usage</td><td>'+data['diskusage']+' MB</td></tr>';
+      if (data['state'] == 'RUNNING') {
+    newtr += '<tr><td>cpu</td><td>'+data['cpu_usage']+'</td></tr>';
+    newtr += '<tr><td>user</td><td>'+data['user']+'</td></tr>';
+    newtr += '<tr><td>system</td><td>'+data['system']+'</td></tr>';
+    newtr += '<tr><td>memory</td><td>'+readable_size(data['memory'])+'</td></tr>';
+    newtr += '<tr><td>cache</td><td>'+readable_size(data['cache'])+'</td></tr>';
+    newtr += '<tr><td>rss</td><td>'+readable_size(data['rss'])+'</td></tr>';
+      }
+      $('#info tbody').append(newtr);
+  },
+    });
 }
 
 function refresh_main(){
     $.ajax({
-	url: '/list.json',
-	cache: false,
-	dataType: 'json',
-	success: function(data){
-	    $.each(data, each_vm);
+  url: '/list.json',
+  cache: false,
+  dataType: 'json',
+  success: function(data){
+      $.each(data, each_vm);
 
-	    $('.clone').click(function(){
-		if (! $('#container_name').val()) {
-		    alert('container name is empty');
-		    return false;
-		}
-		name = $(this).parents('tr').attr('name');
-		url = '/clone/'+name+'/'+$('#container_name').val();
-		if ($(this).attr('mode') === 'fast') {
-		    url += '?mode=fast';
-		}
-		$(this).attr('href', url);
-		return true;
-	    });
+      $('.clone').click(function(){
+    if (! $('#container_name').val()) {
+        alert('container name is empty');
+        return false;
+    }
+    name = $(this).parents('tr').attr('name');
+    url = '/clone/'+name+'/'+$('#container_name').val();
+    if ($(this).attr('mode') === 'fast') {
+        url += '?mode=fast';
+    }
+    $(this).attr('href', url);
+    return true;
+      });
 
-	    $('.run').click(function(){
-		if (! $('#command input').val()) {
-		    alert('command is empty');
-		    return false;
-		}
-		name = $(this).parents('tr').attr('name');
-		$('#command').attr('action', '/attach/'+name);
-		$('#command').submit();
-		return false;
-	    });
+      $('.run').click(function(){
+    if (! $('#command input[name=cmd]').val()) {
+        alert('command is empty');
+        return false;
+    }
+    name = $(this).parents('tr').attr('name');
+    $('#command').attr('action', '/attach/'+name);
+    $('#command').submit();
+    return false;
+      });
 
-	    $('.tip').mouseover(function(){  
-	    	$('#action_tip').text($(this).attr('alt'));
-	    }).mouseout(function(){  
-	    	$('#action_tip').text('');
-	    });
+      $('.tip').mouseover(function(){
+        $('#action_tip').text($(this).attr('alt'));
+      }).mouseout(function(){
+        $('#action_tip').text('');
+      });
 
-	    $('.infotip').mouseover(function(){
-		name = $(this).parents('tr').attr('name');
-		refresh_info(name);
-	    }).mouseout(function(){
-		$('#info tbody').html('');
-	    });
-	},
+      $('.infotip').mouseover(function(){
+    name = $(this).parents('tr').attr('name');
+    refresh_info(name);
+      }).mouseout(function(){
+    $('#info tbody').html('');
+      });
+  },
     });
 }
 
 $(document).ready(function(){
     $('#refresh').click(function(){
-	$('#vmlist tbody').html('');
-	refresh_main();
-	return false;
+  $('#vmlist tbody').html('');
+  refresh_main();
+  return false;
     });
     setInterval(function(){
-	$('#vmlist tbody').html('');
-	refresh_main();
+  $('#vmlist tbody').html('');
+  refresh_main();
     }, 120000);
     refresh_main();
 });
     </script>
-  </head>
-
-  <body>
-    <table id="vmlist">
-      <thead>
-	<tr>
-	  <td>status</td><td>name</td><td>processes</td>
-	  <td>cache</td><td>rss</td><td>cpu time</td>
-	  <td>ipaddr</td><td>actions</td>
-	</tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <input type="text" id="container_name"/>
-    <form id="command" method="POST">
-      <input type="text" name="cmd"/>
-    </form>
-    <div id="action_tip"></div>
-    <a id="refresh" href=""><img src="/static/view-refresh-4.png"></a>
-    <table id="info">
-      <thead><tr><td>name</td><td>value</td></tr></thead>
-      <tbody></tbody>
-    </table>
   </body>
 </html>
