--- a/static/ps.html
+++ b/static/ps.html
@@ -1,47 +1,70 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML>
 <html>
   <head>
-    <title>home</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>LxcWeb PS</title>
+    <meta charset="utf-8" />
     <meta name="author" content="shell">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+  </head>
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="/">Home</a></li>
+              <li class="active"><a href="#">PS</a></li>
+              <li><a href="/config/">Config</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <table id="pslist" class="table table-striped table-condensed">
+        <thead>
+          <tr>
+            <td>user</td><td>pid</td><td>%cpu</td><td>%mem</td>
+            <td>vsz</td><td>rss</td><td>stat</td><td>cmdline</td>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+    <script type="text/javascript" src="/static/js/jquery-1.10.2.min.js" charset="utf-8"></script>
     <script>
     $(document).ready(function(){
-	p = $(location).attr('href').split('/');
-	var name = p[p.length - 1];
-	$.ajax({
-	    url: '/ps/' + name + '.json',
-	    cache: false,
-	    dataType: "json",
-	    success: function(data){
-		$.each(data, function(i, v){
-		    newtr = '<tr>';
-		    newtr += '<td>' + v[0] + '</td>';
-		    newtr += '<td>' + v[1] + '</td>';
-		    newtr += '<td>' + v[2] + '</td>';
-		    newtr += '<td>' + v[3] + '</td>';
-		    newtr += '<td>' + v[4] + '</td>';
-		    newtr += '<td>' + v[5] + '</td>';
-		    newtr += '<td>' + v[7] + '</td>';
-		    newtr += '<td><pre>' + v[10] + '</pre></td>';
-		    newtr += '</tr>';
-		    $("#pslist tbody").append(newtr);
-		});
-	    },
-	});
+      p = location.href.split('/');
+      var name = p[p.length - 1];
+      $.ajax({
+          url: '/ps/' + name + '.json',
+          cache: false,
+          dataType: "json",
+          success: function(data){
+            $.each(data, function(i, v){
+                newtr = '<tr>';
+                newtr += '<td>' + v[0] + '</td>';
+                newtr += '<td>' + v[1] + '</td>';
+                newtr += '<td>' + v[2] + '</td>';
+                newtr += '<td>' + v[3] + '</td>';
+                newtr += '<td>' + v[4] + '</td>';
+                newtr += '<td>' + v[5] + '</td>';
+                newtr += '<td>' + v[7] + '</td>';
+                newtr += '<td><pre>' + v[10] + '</pre></td>';
+                newtr += '</tr>';
+                $("#pslist tbody").append(newtr);
+            });
+        }
+      });
     });
     </script>
-  </head>
-
-  <body>
-    <table id="pslist">
-      <thead>
-	<tr>
-	  <td>user</td><td>pid</td><td>%cpu</td><td>%mem</td>
-	  <td>vsz</td><td>rss</td><td>stat</td><td>cmdline</td>
-	</tr>
-      </thead>
-      <tbody></tbody>
-    </table>
   </body>
 </html>
