--- a/static/home.html
+++ b/static/home.html
@@ -54,7 +54,7 @@
     <script>
 function readable_size(s){
     if (! s) {
-  return "--"
+	return "--"
     }
     s = s / 1024 / 1024;
     return s.toFixed(0)+" MB"
@@ -63,39 +63,39 @@ function readable_size(s){
 function each_vm(name, item){
     newtr = '<tr name="'+name+'">';
     if (item["state"] == "RUNNING") {
-  newtr += '<td><img class="infotip" src="/static/user-online.png"/></td>';
-  newtr += '<td>'+name+'</td>';
-  newtr += '<td><a href="/ps/'+name+'">'+item["pids"].length+'</a></td>';
-  newtr += '<td>'+readable_size(item['cache'])+'</td>';
-  newtr += '<td>'+readable_size(item['rss'])+'</td>';
-  newtr += '<td>'+item['cpu_usage']+'</td>';
-  newtr += '<td>';
-  $.each(item['ipaddr'], function(i, ipaddr){
-      newtr += '<a href="http://'+ipaddr[0]+'">'+ipaddr[0]+'</a>/'+ipaddr[1];
-  });
-  newtr += '</td>';
+	newtr += '<td><img class="infotip" src="/static/user-online.png"/></td>';
+	newtr += '<td>'+name+'</td>';
+	newtr += '<td><a href="/ps/'+name+'">'+item["pids"].length+'</a></td>';
+	newtr += '<td>'+readable_size(item['cache'])+'</td>';
+	newtr += '<td>'+readable_size(item['rss'])+'</td>';
+	newtr += '<td>'+item['cpu_usage']+'</td>';
+	newtr += '<td>';
+	$.each(item['ipaddr'], function(i, ipaddr){
+	    newtr += '<a href="http://'+ipaddr[0]+'">'+ipaddr[0]+'</a>/'+ipaddr[1];
+	});
+	newtr += '</td>';
     } else {
-  newtr += '<td><img class="infotip" src="/static/user-offline.png"/></td>';
-  newtr += '<td>'+name+'</td>';
-  newtr += '<td>--</td>';
-  newtr += '<td>--</td>';
-  newtr += '<td>--</td>';
-  newtr += '<td>--</td>';
-  newtr += '<td>--</td>';
+	newtr += '<td><img class="infotip" src="/static/user-offline.png"/></td>';
+	newtr += '<td>'+name+'</td>';
+	newtr += '<td>--</td>';
+	newtr += '<td>--</td>';
+	newtr += '<td>--</td>';
+	newtr += '<td>--</td>';
+	newtr += '<td>--</td>';
     }
 
     newtr += '<td><a href="/config/'+name+'"><img class="tip" src="/static/configure-3.png" alt="config"/></a>';
     if (item['state'] == 'RUNNING') {
-  newtr += '<a href="/shutdown/'+name+'"><img class="tip" src="/static/media-playback-stop-3.png" alt="shutdown"/></a>';
-  newtr += '<a href="/stop/'+name+'"><img class="tip" src="/static/application-exit-5.png" alt="stop"/></a>';
-  newtr += '<a href="/reboot/'+name+'"><img class="tip" src="/static/system-reboot-2.png" alt="reboot"/></a>';
+	newtr += '<a href="/shutdown/'+name+'"><img class="tip" src="/static/media-playback-stop-3.png" alt="shutdown"/></a>';
+	newtr += '<a class="sure" href="/stop/'+name+'"><img class="tip" src="/static/application-exit-5.png" alt="stop"/></a>';
+	newtr += '<a class="sure" href="/reboot/'+name+'"><img class="tip" src="/static/system-reboot-2.png" alt="reboot"/></a>';
     } else if (item['state'] == "STOPPED") {
-  newtr += '<a href="/start/'+name+'"><img class="tip" src="/static/media-playback-start-3.png" alt="start"/></a>';
-  newtr += '<a class="clone" href=""><img class="tip" src="/static/db_add-2.png" alt="clone"/></a>';
-  newtr += '<a href="/merge/'+name+'"><img class="tip" src="/static/db_comit.png" alt="merge"/></a>';
+	newtr += '<a href="/start/'+name+'"><img class="tip" src="/static/media-playback-start-3.png" alt="start"/></a>';
+	newtr += '<a class="clone" href=""><img class="tip" src="/static/db_add-2.png" alt="clone"/></a>';
+	newtr += '<a href="/merge/'+name+'"><img class="tip" src="/static/db_comit.png" alt="merge"/></a>';
     }
     newtr += '<a class="clone" mode="fast" href=""><img class="tip" src="/static/db_add.png" alt="fast clone"/></a>';
-    newtr += '<a href="/destroy/'+name+'"><img class="tip" src="/static/edit-delete-9.png" alt="destroy"/></a>';
+    newtr += '<a class="sure" href="/destroy/'+name+'"><img class="tip" src="/static/edit-delete-9.png" alt="destroy"/></a>';
     newtr += '<a class="run" href="'+name+'"><img class="tip" src="/static/system-run-5.png" alt="run"/></a>';
     newtr += "</td></tr>";
     $("#vmlist tbody").append(newtr);
@@ -103,84 +103,89 @@ function each_vm(name, item){
 
 function refresh_info(name){
     $.ajax({
-  url: '/info/'+name+'.json',
-  cache: false,
-  dataType: "json",
-  success: function(data){
-      newtr = '<tr><td>status</td><td>'+data['state']+'</td></tr>';
-      newtr += '<tr><td>pid</td><td>'+data['pid']+'</td></tr>';
-      newtr += '<tr><td>disk usage</td><td>'+data['diskusage']+' MB</td></tr>';
-      if (data['state'] == 'RUNNING') {
-    newtr += '<tr><td>cpu</td><td>'+data['cpu_usage']+'</td></tr>';
-    newtr += '<tr><td>user</td><td>'+data['user']+'</td></tr>';
-    newtr += '<tr><td>system</td><td>'+data['system']+'</td></tr>';
-    newtr += '<tr><td>memory</td><td>'+readable_size(data['memory'])+'</td></tr>';
-    newtr += '<tr><td>cache</td><td>'+readable_size(data['cache'])+'</td></tr>';
-    newtr += '<tr><td>rss</td><td>'+readable_size(data['rss'])+'</td></tr>';
-      }
-      $('#info tbody').append(newtr);
-  },
+	url: '/info/'+name+'.json',
+	cache: false,
+	dataType: "json",
+	success: function(data){
+	    newtr = '<tr><td>status</td><td>'+data['state']+'</td></tr>';
+	    newtr += '<tr><td>pid</td><td>'+data['pid']+'</td></tr>';
+	    newtr += '<tr><td>disk usage</td><td>'+data['diskusage']+' MB</td></tr>';
+	    if (data['state'] == 'RUNNING') {
+		newtr += '<tr><td>cpu</td><td>'+data['cpu_usage']+'</td></tr>';
+		newtr += '<tr><td>user</td><td>'+data['user']+'</td></tr>';
+		newtr += '<tr><td>system</td><td>'+data['system']+'</td></tr>';
+		newtr += '<tr><td>memory</td><td>'+readable_size(data['memory'])+'</td></tr>';
+		newtr += '<tr><td>cache</td><td>'+readable_size(data['cache'])+'</td></tr>';
+		newtr += '<tr><td>rss</td><td>'+readable_size(data['rss'])+'</td></tr>';
+	    }
+	    $('#info tbody').append(newtr);
+	},
     });
 }
 
 function refresh_main(){
     $.ajax({
-  url: '/list.json',
-  cache: false,
-  dataType: 'json',
-  success: function(data){
-      $.each(data, each_vm);
+	url: '/list.json',
+	cache: false,
+	dataType: 'json',
+	success: function(data){
+	    $.each(data, each_vm);
 
-      $('.clone').click(function(){
-    if (! $('#container_name').val()) {
-        alert('container name is empty');
-        return false;
-    }
-    name = $(this).parents('tr').attr('name');
-    url = '/clone/'+name+'/'+$('#container_name').val();
-    if ($(this).attr('mode') === 'fast') {
-        url += '?mode=fast';
-    }
-    $(this).attr('href', url);
-    return true;
-      });
+	    $('.sure').click(function(){
+		name = $(this).parents('tr').attr('name');
+		return confirm("op on "+name+", are you sure?");
+	    });
 
-      $('.run').click(function(){
-    if (! $('#command input[name=cmd]').val()) {
-        alert('command is empty');
-        return false;
-    }
-    name = $(this).parents('tr').attr('name');
-    $('#command').attr('action', '/attach/'+name);
-    $('#command').submit();
-    return false;
-      });
+	    $('.clone').click(function(){
+		if (! $('#container_name').val()) {
+		    alert('container name is empty');
+		    return false;
+		}
+		name = $(this).parents('tr').attr('name');
+		url = '/clone/'+name+'/'+$('#container_name').val();
+		if ($(this).attr('mode') === 'fast') {
+		    url += '?mode=fast&run=1';
+		}
+		$(this).attr('href', url);
+		return true;
+	    });
 
-      $('.tip').mouseover(function(){
-        $('#action_tip').text($(this).attr('alt'));
-      }).mouseout(function(){
-        $('#action_tip').text('');
-      });
+	    $('.run').click(function(){
+		if (! $('#command input[name=cmd]').val()) {
+		    alert('command is empty');
+		    return false;
+		}
+		name = $(this).parents('tr').attr('name');
+		$('#command').attr('action', '/attach/'+name);
+		$('#command').submit();
+		return false;
+	    });
 
-      $('.infotip').mouseover(function(){
-    name = $(this).parents('tr').attr('name');
-    refresh_info(name);
-      }).mouseout(function(){
-    $('#info tbody').html('');
-      });
-  },
+	    $('.tip').mouseover(function(){
+		$('#action_tip').text($(this).attr('alt'));
+	    }).mouseout(function(){
+		$('#action_tip').text('');
+	    });
+
+	    $('.infotip').mouseover(function(){
+		name = $(this).parents('tr').attr('name');
+		refresh_info(name);
+	    }).mouseout(function(){
+		$('#info tbody').html('');
+	    });
+	},
     });
 }
 
 $(document).ready(function(){
     $('#refresh').click(function(){
-  $('#vmlist tbody').html('');
-  refresh_main();
-  return false;
+	$('#vmlist tbody').html('');
+	refresh_main();
+	return false;
     });
     setInterval(function(){
-  $('#vmlist tbody').html('');
-  refresh_main();
+	$('#vmlist tbody').html('');
+	refresh_main();
     }, 120000);
     refresh_main();
 });
