--- a/static/home.html
+++ b/static/home.html
@@ -33,8 +33,7 @@
         <thead>
           <tr>
           <td>status</td><td>name</td><td>processes</td>
-          <td>cache</td><td>rss</td><td>cpu time</td>
-          <td>ipaddr</td><td>actions</td>
+          <td>cache</td><td>rss</td><td>cpu time</td><td>actions</td>
           </tr>
         </thead>
         <tbody></tbody>
@@ -68,15 +67,9 @@ function each_vm(name, item){
 	newtr += '<td>'+readable_size(item['cache'])+'</td>';
 	newtr += '<td>'+readable_size(item['rss'])+'</td>';
 	newtr += '<td>'+item['cpu_usage']+'</td>';
-	newtr += '<td>';
-	$.each(item['ipaddr'], function(i, ipaddr){
-	    newtr += '<a href="http://'+ipaddr[0]+'">'+ipaddr[0]+'</a>/'+ipaddr[1];
-	});
-	newtr += '</td>';
     } else {
 	newtr += '<td><img class="infotip" src="/static/user-offline.png"/></td>';
 	newtr += '<td>'+name+'</td>';
-	newtr += '<td>--</td>';
 	newtr += '<td>--</td>';
 	newtr += '<td>--</td>';
 	newtr += '<td>--</td>';
@@ -90,11 +83,12 @@ function each_vm(name, item){
 	newtr += '<a class="sure" href="/reboot/'+name+'"><img class="tip" src="/static/system-reboot-2.png" alt="reboot"/></a>';
 	newtr += '<a class="clone" mode="fast" href=""><img class="tip" src="/static/db_add.png" alt="fast clone"/></a>';
 	newtr += '<a class="sure" href="/destroy/'+name+'"><img class="tip" src="/static/edit-delete-9.png" alt="destroy"/></a>';
+	newtr += '<a class="sure" href="/freeze/'+name+'"><img class="tip" src="/static/media-playback-pause-3.png" alt="freeze"/></a>';
 	newtr += '<a class="run" href="'+name+'"><img class="tip" src="/static/system-run-5.png" alt="run"/></a>';
     } else if (item['state'] == "STOPPED") {
 	newtr += '<a href="/start/'+name+'"><img class="tip" src="/static/media-playback-start-3.png" alt="start"/></a>';
 	newtr += '<a class="clone" href=""><img class="tip" src="/static/db_add-2.png" alt="clone"/></a>';
-	newtr += '<a href="/merge/'+name+'"><img class="tip" src="/static/db_comit.png" alt="merge"/></a>';
+	newtr += '<a href="/merge/'+name+'"><img class="tip" src="/static/db_update.png" alt="merge"/></a>';
 	newtr += '<a class="clone" mode="fast" href=""><img class="tip" src="/static/db_add.png" alt="fast clone"/></a>';
 	newtr += '<a class="sure" href="/destroy/'+name+'"><img class="tip" src="/static/edit-delete-9.png" alt="destroy"/></a>';
     }
@@ -118,6 +112,14 @@ function refresh_info(name){
 		newtr += '<tr><td>memory</td><td>'+readable_size(data['memory'])+'</td></tr>';
 		newtr += '<tr><td>cache</td><td>'+readable_size(data['cache'])+'</td></tr>';
 		newtr += '<tr><td>rss</td><td>'+readable_size(data['rss'])+'</td></tr>';
+		$.each(data['ipaddr'], function(i, ipaddr){
+		    newtr += '<tr><td>ipaddr</td><td>';
+		    newtr += '<a href="http://'+ipaddr[0]+'">'+ipaddr[0]+'</a>/'+ipaddr[1];
+		    newtr += '</td></tr>';
+		});
+	    }
+	    if (data['comment']) {
+		newtr += '<tr><td>comment</td><td>'+data['comment']+'</td></tr>';
 	    }
 	    $('#info tbody').append(newtr);
 	},
@@ -180,8 +182,8 @@ function refresh_main(){
 		refresh_info(name);
 		$('#info').show();
 	    }).mouseout(function(){
-		$('#info tbody').html('');
-		$('#info').hide();
+		// $('#info tbody').html('');
+		// $('#info').hide();
 	    });
 	},
     });
