* uncomment debug line

--- a/static/home.html
+++ b/static/home.html
@@ -182,8 +182,8 @@ function refresh_main(){
 		refresh_info(name);
 		$('#info').show();
 	    }).mouseout(function(){
-		// $('#info tbody').html('');
-		// $('#info').hide();
+		$('#info tbody').html('');
+		$('#info').hide();
 	    });
 	},
     });
